--- a/launcher-train/App.xaml
+++ b/launcher-train/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/206/xaml"
              xmlns:local="clr-namespace:launcher_train"
-             StartupUri="">
+             StartupUri="windowmain.xaml">
     <Application.Resources>
          
     </Application.Resources>
