--- a/launcher-train/App.xaml
+++ b/launcher-train/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="launcher_train.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/206/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:launcher_train"
-             StartupUri="windowmain.xaml">
+             StartupUri="View/Main.xaml">
     <Application.Resources>
          
     </Application.Resources>
